[package]
name    = "marching-pixels"
version = "0.1.0"
edition = "2021"

[features]
default = ["alloc"]
alloc   = []

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
image = { version = "0.24", default-features = false, optional = true }
bevy = { version = "0.12", default-features = false, optional = true, features = [
    "bevy_render",
] }

[dev-dependencies]
bevy = { version = "0.12", default-features = false, features = ["bevy_winit"] }
bevy_egui = { version = "0.23", default-features = false, features = [
    "default_fonts",
] }
bevy_rapier2d = { version = "0.23", default-features = false, features = [
    "dim2",
    "debug-render-2d",
] }
